# quantile-cube

./: .gitignore  README.md  pyproject.toml
src/quantile_cube/: __init__.py  labels.py  plot.py  triangulation.py
tests/: diverging_data.csv  test_plot.py
